style.css
/* 
    General css for the website
*/
body{
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
    padding: 0;
    background-color: #225e21;
}

header{
    background-color: #225e21;
    padding: 15px;
    text-align: center;
}

/* 
    Begining of overall banner/nav bar css
*/
#banner-content{
    display: flex;
    justify-content: space-between;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

/* 
    CSS for the restaurant name and sub name portion of the banner
*/
#banner-name-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0;
    padding: 0;
    float : left;
    overflow: hidden;
}


#restaurant-name{
    font-size: 3rem;

}
#restaurant-name-sub{
    font-size: 1.5rem;

}

.text{
    font-family: Khand;
    color: #fffd55;
    margin: 0;
    padding: 0;
}

/* 
    CSS for the nav bar portion of the banner
*/
#banner-list-container{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    padding: 0;
    float : right;
    overflow: hidden;
}

#banner-list {
    list-style: none;
    display: flex;
    gap: 15px;
    padding: 0;
    margin: 0;
    overflow: hidden;

}

.banner-button-container{
    padding: 15px;
}

.banner-button-container:hover{
    background-color: #094807;
    border-radius: 10px;
    cursor: pointer;
}

#banner-button{
    font-size: 1.5rem;
}

/* 
    CSS for the contact image portion of the website 
*/
#contact-image-content{
    position: relative;
    text-align: center;
    height: auto;
    width: 100%;
}

#contact-image{
    width: 100%;
    height: 100%;
}

#contact-image-text{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 3rem;
}

/* 
    CSS for the body of the page with contact information
*/

#information-content {
    display: flex;
    /* align-items: center; */
    justify-content: center; 
    gap: .2rem;
    color: #225e21;
    width: 100%;
    margin: 0;
    padding: .5rem;
    overflow: hidden;
    flex-grow: 1;
}

#contact-information {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: .2rem;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    float : left;
    overflow: hidden;
    flex: 1;
}

.contact-information-section{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: .5rem;
    width: 90%;
    margin: 0;
    padding: .5rem;
    float : left;
    overflow: hidden;
}

.contact-information-header{
    width: 100%;
    /* padding-left: 2rem;  */
}

.contact-information-header-text{
    font-size: 1.6rem;
}

.contact-information-text{
    font-size: 1.6rem;
}

#message-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    color: #225e21;
    width: 100%;
    height: 100%;
    margin: 0;
    /* padding: .5rem; */
    overflow: hidden;
    flex: 2;
}

.message-information-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    float : left;
    overflow: hidden;
    flex: 2;
}

#message-context-section {
    display: flex;
    /* align-items: center; */
    justify-content: center;
    gap: .2rem;
    color: #225e21;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: .5rem;
    overflow: hidden;
    flex: 2;
}

.small-input-box{
    width: 90%;
    border-radius: 3%;
    background-color: #EDE5E5;
}

.small-input-box:hover{
    cursor: pointer;
}

.input-box-text{
    padding: .5rem;
    margin: .2rem;
    opacity: 50%;
    color: black;
}

.written-message-section{
    /* height: 100%; */
    flex: 2;
}

#message-input-box{
    height: 100%;
}

#submit-button{
    background-color: #fffd55;
    border-radius: 3%;
    padding: .75rem;
}

#submit-button:hover{
    cursor: pointer;
}


#submit-text{
    font-size: 1.3rem;
    color: #225e21;
    margin-left: .5rem;
    margin-right: .5rem;
}


footer{
    background-color: #fffd55;
    display:flex;
    gap: .75rem;
    align-content: center;
    justify-content: center;
    padding: .5rem;
    margin-top: 1rem;
    flex-shrink: 0;
}

#footer-text{
    font-size: 1.5rem;
    color: #225e21;
}

#icons{
    font-size: 1.8rem;
    color: #225e21;
}

#icons:hover{
    cursor: pointer;
}

@media screen and (max-width: 600px){
    body{
        color: black;
    }
    #information-content {
        display: flex;
        align-items: center;
        justify-content: center; 
        flex-direction: column;
        gap: .2rem;
        color: #225e21;
        width: 100%;
        margin: 0;
        padding: .5rem;
        overflow: hidden;
    }

    #contact-information {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: .2rem;
        width: 100%;
        height: 100%;
        margin: 0;
        padding: 0;
        float : left;
        overflow: hidden;
        flex: 1;
    }

    #message-content {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 1rem;
        color: #225e21;
        width: 90%;
        height: 100%;
        margin: 0;
        overflow: hidden;
        flex: 2;
    }

    #message-context-section {
        display: flex;
        flex-direction: column;
        /* align-items: center; */
        justify-content: center;
        gap: .2rem;
        color: #225e21;
        width: 100%;
        height: 100%;
        margin: 0;
        padding: .5rem;
        overflow: hidden;
        flex: 2;
    }

}


@media screen and (max-width: 1024px){
    #information-content {
        display: flex;
        align-items: center;
        justify-content: center; 
        flex-direction: column;
        gap: .2rem;
        color: #225e21;
        width: 100%;
        margin: 0;
        padding: .5rem;
        overflow: hidden;
    }

    #contact-information {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: .2rem;
        width: 100%;
        height: 100%;
        margin: 0;
        padding: 0;
        float : left;
        overflow: hidden;
        flex: 1;
    }

    #message-content {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 1rem;
        color: #225e21;
        width: 90%;
        /* height: 100%; */
        margin: 0;
        overflow: hidden;
        flex: 2;
    }

}





/* .website-content-section {
    max-width: 95%;
    margin: 10px auto;
    margin-left: 5px;
    margin-right: 5px;
    background-color: #f4f4f4;
    padding: 20px;
    border-radius: 15px;
    box-shadow: 0px 0px 10px gray;
}

#overview-container{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    padding: 0;
    margin: 20px;
    overflow: hidden;
}

#overview-text{
    max-width: 35%;
    height: auto;
}

.image-sketch-container{
    display: flex;
    width: 100%;
    justify-content: center;
    align-items: center;
    gap: 10px;
    padding: 0;
    margin: 20px;
    
}

#image-sketch{
    max-width: 80%;
    min-width: 0;
    height: auto;
    display: block;
    margin: 10px 0;
}

#image-persona{
    max-width: 45%;
    height: auto;
    min-width: 0;
    height: auto;
    display: block;
    margin: 10px 0;
}

#image-frame{
    max-width: 30%;
    height: auto;
    min-width: 0;
    height: auto;
    display: block;
    margin: 10px 0;
} */


/* .table{
    table-layout: fixed;
    width: 100%;
    margin-top: 20px;
    border: 2px solid black;
    border-collapse: collapse;
}

td, th{
    border:2px solid black;
    padding: 10px;
    text-align: left;
}

.table tr:nth-child(even) {
    background-color: #f9f9f9;
} */

